--- a/index.html
+++ b/index.html
@@ -2,15 +2,58 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width">
-    <title>My Portfolio</title>
+
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+
+  <link rel="stylesheet" href="css/styles.css">
+
+
+  <title>Alejandro Rodriguez Portfolio</title>
 </head>
 
 <body>
-    <H1>
-        My Portfolio
-    </H1>
+  <!-- .auto is for the cursor -->
+  <div class=".auto">
+    <div>
+      <h1>Alejandro Rodriguez </h1>
+      <h2>Software Developer </h2>
+      <hr>
+      <div class="main-section">
+        <p> My <i> favorite</i> thing about programming is the problem solving.</p>
+      </div>
+      <div class="img">
+        <div class="img-section">
+          <img class="img-cat" src="https://cdn.pixabay.com/photo/2014/11/30/14/11/cat-551554_1280.jpg/200x200"
+            alt="Picture of myself">
+        </div>
+      </div>
+
+      <h3>About Me </h3>
+
+      <div class="main-section">
+        <p> Enamel pin meh tumblr pork belly, meggings franzen snackwave lo-fi cold-pressed irony chambray DIY taiyaki.
+          Craft beer bicycle rights glossier sustainable tilde banh mi jianbing. Retro YOLO disrupt, microdosing
+          sartorial jean shorts venmo iPhone sustainable you probably haven't heard of them pop-up craft beer tofu.
+          Post-ironic put a bird on it letterpress, pok pok vegan drinking vinegar schlitz DIY yuccie shaman. Locavore
+          readymade hell of, literally organic crucifix pork belly mustache hoodie bespoke vexillologist. Organic kogi
+          twee, farm-to-table wolf humblebrag unicorn tumblr 3 wolf moon meggings. Chia organic vape, coloring book
+          YOLO ugh salvia cred chillwave brooklyn cliche tilde synth vice.
+      </div>
+      </p>
+      <h3> My Projects </h3>
+
+      <ul>
+        <li> Project 1 </li>
+        <li> Project 2 </li>
+        <li> Project 3 </li>
+      </ul>
+      <h3> Contact Me </h3>
+      <p> <b>Phone</b> 414-666-0088 </p>
+      <p><b>Email</b> <a href="mailto:fakeemail@gmail.com"> <b>fakeemail@gmail.com</b></a> </p>
+
+    </div>
+    <!-- </div> for the cursor -->
     <!-- 
       Directions:
         1. Create a DIV element to contain the page content
