--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <div class=".auto">
     <div>
       <h1>Alejandro Rodriguez </h1>
-      <h2>The coolest Software Developer </h2>
+      <h2 style="color:sandybrown;">The coolest Software Developer </h2>
       <hr>
       <div class="main-section">
         <p> My <i> favorite</i> thing about programming is the problem solving.</p>
